Return a list of json as output