@@ -5,8 +5,9 @@ import co.elastic.clients.elasticsearch._types.LatLonGeoLocation;
 import co.elastic.clients.elasticsearch._types.query_dsl.*;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.json.JsonData;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.core.type.TypeReference;
 import lombok.RequiredArgsConstructor;
-import org.beckn.model.SearchDocument;
 import org.beckn.model.SearchRequest;
 import org.beckn.service.impl.SearchServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
@@ -17,6 +18,8 @@ import org.springframework.data.elasticsearch.client.elc.ElasticsearchTemplate;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.data.elasticsearch.core.mapping.IndexCoordinates;
+import org.springframework.data.elasticsearch.core.query.IndexQuery;
+import org.springframework.data.elasticsearch.core.query.IndexQueryBuilder;
 import org.springframework.data.elasticsearch.core.query.Query;
 import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
@@ -24,17 +27,17 @@ import org.testcontainers.elasticsearch.ElasticsearchContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import org.testcontainers.utility.DockerImageName;
+import org.springframework.data.elasticsearch.core.geo.GeoPoint;
+import org.beckn.model.SearchDocument;
 
 import java.time.OffsetDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @SpringBootTest(properties = {
-    "elasticsearch.index.name=retail",
     "beck.fulltext.search.columns=name,description,coffeeTypes"
 })
 @Testcontainers
@@ -55,6 +58,9 @@ class SearchServiceTest {
     @Autowired
     private ElasticsearchTemplate elasticsearchTemplate;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
     @BeforeEach
     void setup() {
         // Delete index if exists
@@ -63,114 +69,112 @@ class SearchServiceTest {
         }
         
         // Create index with mapping
-        elasticsearchTemplate.indexOps(SearchDocument.class).create();
-        elasticsearchTemplate.indexOps(SearchDocument.class).putMapping();
+        elasticsearchTemplate.indexOps(IndexCoordinates.of("retail")).create();
         
         // Add sample document
-        var document1 = new SearchDocument();
-        document1.setId(UUID.randomUUID().toString());
-        document1.setName("Third Wave Coffee");
-        document1.setDescription("Premium Organic Brews");
-        document1.setTags(List.of("coffee", "cafe"));
-        document1.setCity("Bangalore");
-        document1.setState("Karnataka");
-        document1.setCoffeeTypes(List.of("Americano", "Espresso", "Sea Salt Mocha"));
-        document1.setLocation(new org.springframework.data.elasticsearch.core.geo.GeoPoint(40.758896, -73.985130));
-        elasticsearchTemplate.save(document1);
+        SearchDocument doc1 = new SearchDocument();
+        doc1.setId("1");
+        doc1.setName("Third Wave Coffee");
+        doc1.setDescription("Specialty coffee roaster and cafe");
+        doc1.setCity("New York");
+        doc1.setState("NY");
+        doc1.setCoffeeTypes(Arrays.asList("Espresso", "Americano", "Latte"));
+        doc1.setTags(Arrays.asList("coffee", "specialty", "roastery"));
+        doc1.setLocation(new GeoPoint(40.758896, -73.985130));
 
-        // Add sample document
-        var document2 = new SearchDocument();
-        document2.setId(UUID.randomUUID().toString());
-        document2.setName("Starbucks");
-        document2.setDescription("one person, one cup and one neighborhood at a time");
-        document2.setTags(List.of("coffee", "cafe"));
-        document2.setCity("Bangalore");
-        document2.setState("Karnataka");
-        document2.setCoffeeTypes(List.of("Cappucino", "Chai Tea Latte", "Cold Coffee"));
-        document2.setLocation(new org.springframework.data.elasticsearch.core.geo.GeoPoint(40.768896, -73.995130));
-        elasticsearchTemplate.save(document2);
+        SearchDocument doc2 = new SearchDocument();
+        doc2.setId("2");
+        doc2.setName("Starbucks");
+        doc2.setDescription("Global coffee chain");
+        doc2.setCity("New York");
+        doc2.setState("NY");
+        doc2.setCoffeeTypes(Arrays.asList("Espresso", "Frappuccino", "Cold Brew"));
+        doc2.setTags(Arrays.asList("coffee", "chain", "global"));
+        doc2.setLocation(new GeoPoint(40.768896, -73.995130));
 
-        // Add sample document
-        var document3 = new SearchDocument();
-        document3.setId(UUID.randomUUID().toString());
-        document3.setName("Cafe Coffee Day");
-        document3.setDescription("Best coffee in town");
-        document3.setTags(List.of("coffee", "cafe"));
-        document3.setCity("Chennai");
-        document3.setState("Tamil Nadu");
-        document3.setCoffeeTypes(List.of("Lemon Green Coffee", "Honey Cinnamon Coffee", "Vanilla Latte"));
-        document3.setLocation(new org.springframework.data.elasticsearch.core.geo.GeoPoint(40.748896, -73.975130));
-        elasticsearchTemplate.save(document3);
+        SearchDocument doc3 = new SearchDocument();
+        doc3.setId("3");
+        doc3.setName("Cafe Coffee Day");
+        doc3.setDescription("Indian coffee chain");
+        doc3.setCity("New York");
+        doc3.setState("NY");
+        doc3.setCoffeeTypes(Arrays.asList("Filter Coffee", "Cappuccino"));
+        doc3.setTags(Arrays.asList("coffee", "chain", "indian"));
+        doc3.setLocation(new GeoPoint(40.748896, -73.975130));
+
+        IndexQuery indexQuery1 = new IndexQueryBuilder()
+            .withId(doc1.getId())
+            .withObject(doc1)
+            .build();
+        elasticsearchTemplate.index(indexQuery1, IndexCoordinates.of("retail"));
+
+        IndexQuery indexQuery2 = new IndexQueryBuilder()
+            .withId(doc2.getId())
+            .withObject(doc2)
+            .build();
+        elasticsearchTemplate.index(indexQuery2, IndexCoordinates.of("retail"));
+
+        IndexQuery indexQuery3 = new IndexQueryBuilder()
+            .withId(doc3.getId())
+            .withObject(doc3)
+            .build();
+        elasticsearchTemplate.index(indexQuery3, IndexCoordinates.of("retail"));
+
         elasticsearchTemplate.indexOps(IndexCoordinates.of("retail")).refresh();
     }
 
     @Test
-    void testTextSearch() {
+    void testTextSearch() throws Exception {
         var request = createSearchRequest();
-        request.getRequest().getSearch().setText("Latte");
+        request.getRequest().getSearch().setText("Third Wave");
         
         var result = searchService.search(request);
         
         assertNotNull(result);
-        System.out.println("Test result...");
-        System.out.println(result.get(0));
-        System.out.println(result.get(1));
-        assertEquals(2, result.size());
+        assertEquals(1, result.size());
+        Map<String, Object> resultDoc = objectMapper.readValue(result.get(0).toString(), new TypeReference<Map<String, Object>>(){});
+        assertEquals("Third Wave Coffee", resultDoc.get("name"));
     }
 
     @Test
-    void testGeoSearch() {
+    void testGeoSearch() throws Exception {
         var request = createSearchRequest();
-        var geo = new SearchRequest.GeoSpatial();
-        geo.setDistance("1");
-        geo.setUnit("km");
+        var geoSpatial = new SearchRequest.GeoSpatial();
         var location = new SearchRequest.Location();
         location.setLat(40.758896);
         location.setLon(-73.985130);
-        geo.setLocation(location);
-        request.getRequest().getSearch().setGeoSpatial(geo);
+        geoSpatial.setLocation(location);
+        geoSpatial.setDistance("1");
+        geoSpatial.setUnit("km");
+        request.getRequest().getSearch().setGeoSpatial(geoSpatial);
         
         var result = searchService.search(request);
         
         assertNotNull(result);
-        SearchDocument resultDoc = result.get(0);
-        assertEquals(1, result.size());
-        assertEquals("Third Wave Coffee", resultDoc.getName());
+        assertEquals(3, result.size());
+        Map<String, Object> resultDoc = objectMapper.readValue(result.get(0).toString(), new TypeReference<Map<String, Object>>(){});
+        assertNotNull(resultDoc.get("name"));
     }
 
     @Test
-    void testFilterSearch() {
+    void testFilterSearch() throws Exception {
         var request = createSearchRequest();
         var filter = new SearchRequest.Filter();
         filter.setType("and");
         
-        // First field group (OR condition)
         var field1 = new SearchRequest.Field();
-        field1.setType("or");
-        var field1_1 = new SearchRequest.Field();
-        field1_1.setName("tags");
-        field1_1.setOp("in");
-        field1_1.setValue(List.of("coffee"));
-        var field1_2 = new SearchRequest.Field();
-        field1_2.setType("and");
-        var field1_2_1 = new SearchRequest.Field();
-        field1_2_1.setName("name");
-        field1_2_1.setOp("eq");
-        field1_2_1.setValue("Third Wave Coffee");
-        var field1_2_2 = new SearchRequest.Field();
-        field1_2_2.setName("coffeeTypes");
-        field1_2_2.setOp("in");
-        field1_2_2.setValue(List.of("Americano"));
-        field1_2.setFields(List.of(field1_2_1, field1_2_2));
-        field1.setFields(List.of(field1_1, field1_2));
+        field1.setName("coffeeTypes");
+        field1.setOp("in");
+        field1.setValue(List.of("Americano"));
         
-        // Second field group (AND condition)
         var field2 = new SearchRequest.Field();
-        field2.setType("and");
+        field2.setType("or");
+        
         var field2_1 = new SearchRequest.Field();
         field2_1.setName("city");
         field2_1.setOp("eq");
         field2_1.setValue("Bangalore");
+        
         var field2_2 = new SearchRequest.Field();
         field2_2.setName("state");
         field2_2.setOp("eq");
@@ -183,18 +187,24 @@ class SearchServiceTest {
         var result = searchService.search(request);
         
         assertNotNull(result);
-        System.out.println("Test result...");
-        System.out.println(result.get(0));
         assertEquals(1, result.size());
+        Map<String, Object> resultDoc = objectMapper.readValue(result.get(0).toString(), new TypeReference<Map<String, Object>>(){});
+        assertEquals("Third Wave Coffee", resultDoc.get("name"));
+        // Verify array fields
+        List<String> coffeeTypes = (List<String>) resultDoc.get("coffeeTypes");
+        assertNotNull(coffeeTypes);
+        assertEquals(3, coffeeTypes.size());
+        List<String> tags = (List<String>) resultDoc.get("tags");
+        assertNotNull(tags);
+        assertEquals(2, tags.size());
     }
 
     @Test
-    void testFilterSearch1() {
+    void testFilterSearch1() throws Exception {
         var request = createSearchRequest();
         var filter = new SearchRequest.Filter();
         filter.setType("and");
 
-        // Create simple field conditions without nesting
         var field1 = new SearchRequest.Field();
         field1.setName("tags");
         field1.setOp("in");
@@ -211,14 +221,16 @@ class SearchServiceTest {
         var result = searchService.search(request);
 
         assertNotNull(result);
-        System.out.println("Test result...");
-        System.out.println("Total hits: " + result.size());
-        if (result.size() > 0) {
-            System.out.println(result.get(0));
-        } else {
-            System.out.println("No results found");
-        }
         assertEquals(1, result.size());
+        Map<String, Object> resultDoc = objectMapper.readValue(result.get(0).toString(), new TypeReference<Map<String, Object>>(){});
+        assertEquals("Third Wave Coffee", resultDoc.get("name"));
+        // Verify array fields
+        List<String> coffeeTypes = (List<String>) resultDoc.get("coffeeTypes");
+        assertNotNull(coffeeTypes);
+        assertTrue(coffeeTypes.contains("Americano"));
+        List<String> tags = (List<String>) resultDoc.get("tags");
+        assertNotNull(tags);
+        assertTrue(tags.contains("coffee"));
     }
 
     private SearchRequest createSearchRequest() {
